fixed image not showing

--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
 
 body{
   height: 100vh;
-  background: url(/assets/bg_img.png) center / cover no-repeat;
+  background: url(./assets/bg_img.png) center / cover no-repeat;
 
 }
 
@@ -162,7 +162,7 @@ animation: gold-glow 2s infinite alternate;
   width: 100%;
   height: 27px;
 
-  background: url(/assets/wood.jpg);
+  background: url(./assets/wood.jpg);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
